# SEIM

./: .editorconfig  .env.local-prod  .eslintrc.js  .eslintrc.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_PROGRESS.md  CLEANUP_START.md  COMPLETE_SESSION_FINAL_REPORT.md  CONTINUATION_SESSION_SUMMARY.md  CONTRIBUTING.md  DYNAMIC_FORMS_TEST_SUMMARY.md  Dockerfile  Dockerfile.e2e  Dockerfile.prod  Dockerfile.test  E2E_EXPANSION_PROGRESS.md  E2E_QUICK_FIX_GUIDE.md  E2E_WORKFLOW_TEST_REPORT.md  FINAL_SESSION_SUMMARY.md  LICENSE  MASTER_TEST_SUMMARY.md  Makefile  PROJECT_KNOWLEDGE_LLM.md  PROJECT_STATUS_NOVEMBER_2025.md  README.md  RELEASE_NOTES.md  TEST_COVERAGE_IMPROVEMENTS.md  ULTIMATE_SESSION_SUMMARY.md  VIDEO_DEMOS_GUIDE.md  VIDEO_DEMOS_READY.md  VIDEO_REVIEW_CHECKLIST.md  VUE_MIGRATION_CHECKLIST.md  codex.cmd  (+27 more)
.continue/: config.json
.github/: README.md  dependabot.yml
.serena/: project.yml
SEIM/: temp_req.txt
accounts/: admin.py  apps.py  jwt_views.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py  views_dashboard.py
analytics/: admin.py  dashboard_export.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
api/: models.py  urls.py
application_forms/: admin.py  apps.py  models.py  serializers.py  services.py  step_template_service.py  urls.py  views.py  visibility.py
cms/: __init__.py  admin.py  apps.py  blocks.py  exchange_program_sync.py  models.py  tests.py  wagtail_hooks.py
core/: apps.py  cache.py  celery.py  dynforms_urls.py  models.py  permissions.py  throttling.py  urls.py  views.py
dashboard/: models.py
data_management/: admin.py  models.py  tests.py  urls.py  views.py
docker/: Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  restart_clean.bat
docs/: ANALYTICS_DASHBOARD_AND_REPORTING.md  AUTHENTICATION_AND_PERMISSIONS.md  BOOTSTRAP_IMPLEMENTATION_COMPLETE.md  BOOTSTRAP_IMPLEMENTATION_FINAL.md  CGRI_MOVILIDAD_INTEGRATION_ANALYSIS.md  CMS_COLOR_SCHEME_UPDATE.md  CMS_CONTENT_ASSESSMENT.md  CMS_CURRENT_STATE.md  CMS_HOMEPAGE_CONTENT_MAP.md  CMS_INDEX.md  CMS_LANDING_PAGE_OVERVIEW.md  CMS_QUICK_START.md  CMS_RESTORE_GUIDE.md  CODE_REVIEW_CLEANUP_2025-12-05.md  CODE_REVIEW_FIXES_APPLIED.md  CODE_STYLE.md  DATATABLES_PHASE1_COMPLETE.md  DATATABLES_PHASE2_COMPLETE.md  DATATABLES_PHASE3_COMPLETE.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_TEMPLATE.md  DOCUMENTATION_UPDATES_SUMMARY.md  EXCHANGE_CREATION_COMPLETE.md  EXCHANGE_CREATION_IMPLEMENTATION.md  FINAL_SUMMARY.txt  FRONTEND_FILE_INDEX.md  FRONTEND_IMPLEMENTATION_PLAN_COMPLETE.md  FRONTEND_IMPLEMENTATION_PLAN_PART1.md  FRONTEND_IMPLEMENTATION_PLAN_PART2.md  FRONTEND_IMPLEMENTATION_PLAN_PART3.md  FRONTEND_NEXT_STEPS.md  FRONTEND_QUICK_REFERENCE.md  FRONTEND_REMAINING_TASKS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  INTERNACIONAL_CONTENT_REFERENCE.md  INTERNACIONAL_DEPLOYMENT_GUIDE.md  (+57 more)
documentation/: README.md  admin_guide.md  api_documentation.md  architectural_decisions.md  architecture.md  backlog.md  business_rules.md  caching.md  changelog.md  cms_guide.md  dark-mode-implementation.md  deployment.md  developer_guide.md  documentation_maintenance.md  e2e_test_ids_guide.md  e2e_testing_guide.md  environment_variables.md  form_builder_guide.md  frontend_guide.md  grade_translation_design.md  grade_translation_user_guide.md  installation.md  internationalization_guide.md  new_features_oct_2025.md  roadmap.md  selenium_setup.md  testing.md  troubleshooting.md  user_stories.md  virus_scanner_setup.md  wagtail_integration_next_steps.md  websocket_notifications_guide.md
documents/: admin.py  filters.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py  virus_scanner.py
exchange/: admin.py  agreement_expiration.py  agreement_renewal.py  calendar_events.py  calendar_ics.py  demo_seed.py  eligibility_rules.py  eligibility_rulesets.py  filters.py  forms.py  models.py  readiness.py  scholarship_scoring.py  serializers.py  services.py  tests.py  views.py
frontend/: __init__.py  urls.py  views.py
frontend-vue/: .env  .env.development  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.js
grades/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
internacional/: __init__.py  urls.py
locale/: README.md
metrics/: cleanup_progress_phase0.md  coverage_before.txt  lines_of_code_before.txt  pre_cleanup_metrics.json  pre_cleanup_report.md  python_files_inventory.txt
nginx/: nginx.conf
notifications/: admin.py  consumers.py  digest.py  jwt_middleware.py  models.py  routing.py  routing_reference.py  serializers.py  services.py  tasks.py  views.py
plugins/: models.py
reports/: ANALYSIS_SUMMARY.md  CLEANUP_SUMMARY_2025-05-29.md  bandit_security.json  bandit_security.txt  black_formatting.txt  cleanup_progress_2025-05-28.md  cleanup_progress_phase1_2.md  complexity_analysis.txt  complexity_cc.json  coverage_report.txt  coverage_run.txt  dead_code_analysis.txt  flake8_full_output.txt  flake8_report.txt  formatting_summary.md  halstead_metrics.txt  isort_formatting.txt  maintainability_index.txt  mypy_type_analysis.txt  phase_0_completed.txt  phase_1_completed.txt  pylint_report.json  pylint_report.txt  raw_metrics.txt  report.html  safety_dependencies.json  security_audit.txt
requirements/: base.txt  dev.txt  prod.txt
scripts/: README.md  check_chrome_setup.py  check_django_imports.py  check_imports.py  check_imports_fixed.py  cleanup.bat  cleanup.py  cleanup_phase0.py  cleanup_phase1.py  cleanup_phase2.py  cleanup_project.py  code-quality-analyzer.js  code_quality.py  container_fix_verification.sh  dashboard_debug.py  database_optimization.py  deploy_exchange_fixes.bat  deploy_exchange_fixes.sh  ensure_vue_dist.sh  entrypoint-temp.sh  entrypoint.sh  healthcheck.sh  jquery_fix_verification.sh  local-prod-web-entry.sh  maintenance-automation.js  (+34 more)
(+1203 files in other folders)
