[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seim"
version = "1.0.0"
description = "Student Exchange Information Management System"
authors = [{name = "SEIM Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.2.3",
    "djangorestframework>=3.15.1",
    "psycopg2-binary>=2.9.9",
    "celery>=5.3.6",
    "redis>=5.0.4",
    "django-redis>=5.4.0",
    "djangorestframework-simplejwt>=5.3.1",
    "django-cors-headers>=4.3.1",
    "django-environ>=0.11.2",
    "reportlab>=4.2.0",
    "python-magic>=0.4.27",
    "django-dynforms>=2025.7.0",
    "django-ses>=3.5.0",
    "drf-spectacular>=0.27.1",
    "django-filter>=24.1",
    "whitenoise>=6.6.0",
    "sphinx>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pylint>=3.0.3",
    "bandit>=1.7.5",
    "pre-commit>=3.6.0",
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "coverage>=7.3.2",
]

test = [
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
]

# Ruff configuration - used for linting and formatting (not Black)
[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    "migrations",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "B008",  # do not perform function calls in argument defaults (common in Django)
    "C901",  # too complex
    "DJ001", # avoid using null=True on string-based fields (sometimes needed)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"*/tests/*" = ["B011"]    # assert False

[tool.isort]
profile = "django"
multi_line_output = 3
line_length = 88
known_first_party = ["seim", "accounts", "analytics", "api", "core", "dashboard", "documents", "exchange", "frontend", "notifications", "plugins"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
force_alphabetical_sort_within_sections = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "djangorestframework.*",
    "celery.*",
    "redis.*",
    "reportlab.*",
    "magic.*",
    "dynforms.*",
    "ses.*",
    "spectacular.*",
    "filter.*",
    "whitenoise.*",
    "sphinx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "seim.settings.test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=accounts",
    "--cov=analytics",
    "--cov=api",
    "--cov=application_forms",
    "--cov=core",
    "--cov=dashboard",
    "--cov=data_management",
    "--cov=documents",
    "--cov=exchange",
    "--cov=frontend",
    "--cov=grades",
    "--cov=internacional",
    "--cov=notifications",
    "--cov=plugins",
    "--cov=seim",
    "--cov-config=pyproject.toml",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
# First-party Django apps measured by unit+integration runs. CMS is omitted: ``seim.settings.test``
# strips Wagtail/cms, so including ``cms`` would falsely tank the gate (see docs/prompts/ci-backend-green-prompt.md).
source = [
    "accounts",
    "analytics",
    "api",
    "application_forms",
    "core",
    "dashboard",
    "data_management",
    "documents",
    "exchange",
    "frontend",
    "grades",
    "internacional",
    "notifications",
    "plugins",
    "seim",
]
omit = [
    "*/migrations/*",
    "*/management/commands/*",
    "*/tests/*",
    "*/tests.py",
    "*/venv/*",
    "*/env/*",
    "*/__pycache__/*",
    "*/staticfiles/*",
    "*/media/*",
    "manage.py",
    "*/settings/*",
    "*/wsgi.py",
    "*/asgi.py",
    "*/celery.py",
    "seim/urls_OLD_BACKUP.py",
    "download_uadec_assets.py",
    # Thin wiring / boilerplate: focus gate on models, services, tasks, etc.
    "*/admin.py",
    "*/views.py",
    "*/serializers.py",
    "*/urls.py",
    "*/filters.py",
    "*/forms.py",
    # ASGI/WebSocket wiring; exercised by dedicated tests, not unit+integration HTTP runs.
    "notifications/jwt_middleware.py",
    "notifications/routing.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations", "staticfiles", "media"]
skips = ["B101", "B601"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0621",  # redefined-outer-name
    "W0612",  # unused-variable
    "W0611",  # unused-import
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 10
max-attributes = 10
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 60 